improved 'about' page appearance. fixed gap on home page. fixed footer links.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -3,7 +3,7 @@
 }
 body {
     position: relative;
-    top: 80px;
+    top: 60px;
 }
 
 @import 'splash/main';
@@ -196,7 +196,7 @@ ui-view {
 }
 // @import 'directives/main';
 
-// @import 'home/main';
+@import 'home/main';
 // @import 'about/main';
 // @import 'tutorial/main';
 // @import 'login/main';
